* classic ui: Added process status to JSON response #3172 - RB
* classic ui: Added data/time selection to 'log file navigation' #3168 - RB
* classic ui: Added setting focus to main frame on first site load #3202 - RB
* classic ui: Made sort buttons larger #3814 - RB
* classic ui: Made classic ui work standalone #3869 - RB

* idoutils: use transactions for large object dumps, opt-in config option #3527 - GB
* idoutils: add experimental socket queue proxy; opt-in via config option #3533 - GB

FIXES
* core: fix faulty macro cleaning, replacing spaces with pluses where they shouldn't be cleaned #3397 - MF
* core: fix macro escaping logs incorrect warning for $$escapes #3404 - MF
* core: fix wrong escalation notification due to state based escalation range behaviour changes #3441 - MF
* core: change ownership of debug log file before dropping privileges (Eric Stanley) #3521 - MF

* idoutils: fix many memory leaks in ido2db on dbi_result_free and others (thx Klaus Wagner) #3406 - MF
* idoutils: fix ido2db crashes when Oracle queries fail #3324 - GB
* idoutils: fix ORA-1461 writing data to varchar2 exceeding field size limit output, command_arg and commandline data written to Oracle #3324 #3325 - TD
* idoutils: fix unsafe handling of dbi_conn_sequence_last, rewrite last_insert_id/sequence fetching #3408 - MF
* idoutils: fix ido2db does not cleanly exit the client on wrong schema version check in db_hello #3419 - MF
* idoutils: fix FROM_UNIXTIME(NULL) does not work with MySQL 5.0.x #3399 #3466 - CF
* idoutils: fix unknown column contactaddress_id (thx fmbiete) #3483 - MF
* idoutils: fix empty output/perfdata segfaults for mysql string truncate #3516 - MF
* idoutils: unlink leftover socket on startup, if using unix sockets - MF
* idoutils: fix long output data causes wrong data in database #2342 - MF

* install: drop unused daemon-init-readhat script (spec uses daemon-init) #3402 - MF